--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ node_modules/
 
 # production
 /build
+/frontend/build
 
 # misc
 .DS_Store
@@ -23,3 +24,4 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.vscode/settings.json
